# context-control-kv-cache

./: .gitignore  GETTING_STARTED.md  README.md  downloadModel.py  login.py  requirements.txt  start.sh  test.py  text.txt
backend/: CMakeLists.txt  app.py  start.sh  start_backend.sh
backend/tools/: CMakeLists.txt
backend/tools/server/: server.cpp
backend/tools/server/webui/: package-lock.json
backend/tools/server/webui/src/lib/components/app/chat/ChatForm/: ChatForm.svelte
backend/tools/server/webui/src/lib/components/app/chat/ChatMessages/: ChatMessage.svelte  ChatMessageAssistant.svelte  ChatMessageUser.svelte  ChatMessages.svelte  TextSelectionPopover.svelte
backend/tools/server/webui/src/lib/components/app/chat/ChatScreen/: ChatScreen.svelte
backend/tools/server/webui/src/lib/components/app/chat/ChatSidebar/: ChatSidebar.svelte  ChatSidebarConversationItem.svelte
backend/tools/server/webui/src/lib/services/: chat.ts
backend/tools/server/webui/src/lib/stores/: chat.svelte.ts
backend/tools/server/webui/src/lib/types/: api.d.ts  database.d.ts  settings.d.ts
frontend/: DESIGN_SPECS.md  GRAPH_IMPLEMENTATION.md  MIGRATION_NOTES.md  README.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatInterface.tsx  ChatNode.tsx  FocusedView.tsx  GraphView.tsx  ModelSelector.tsx  llama.tsx
frontend/app/hooks/: useBranchAnimation.ts  useGraphState.ts  useTextSelection.ts
frontend/app/types/: graph.ts
frontend/app/utils/: api.ts  (+1 more)
(+1 files in other folders)
